k8s/server-cluster-ip-address.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec: 
  type: ClusterIP
  selector:
    component: server
  ports: 
    - port: 4500
      targetPort: 4500
